--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
-nested function calls like println(add(5, 3)) fail for some reason
 Boxer will modify expressions like foo.bar() into bar(foo) which it should not
 Lexer does some parsing shit around structs
+Add .get_literal method to ast and boxer nodes so I dont have to pattern match every time I want the literal
+Also TIR Builder assumes correctness which I am not sure I like
