Copilot ins and first class structs

--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@ Boxer will modify expressions like foo.bar() into bar(foo) which it should not
 Lexer does some parsing shit around structs
 Add .get_literal method to ast and boxer nodes so I dont have to pattern match every time I want the literal
 Also TIR Builder assumes correctness which I am not sure I like
+Lexer is to heavily involved and will do parsing logic to resolve struct types
